--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         uses: ArtemSBulgakov/buildozer-action@v1.1.3
         id: buildozer
         with:
-          workdir: src
+          workdir: .
           buildozer_version: stable
 
       - name: Upload artifacts
