--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           workdir: .
           buildozer_version: stable
+        env:
+          APP_VERSION: "0.0.${{ GITHUB_RUN_NUMBER }}"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
