--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,13 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2 
+        
+      - name: Set version number
+        run: |
+          $version = "0.0."+($($Env:GITHUB_RUN_NUMBER))
+          echo $version
+          echo "VERSION_NUMBER=$version" 
 
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1.1.3
@@ -18,7 +24,7 @@ jobs:
           workdir: .
           buildozer_version: stable
         env:
-          APP_VERSION: 0.0.$env:GITHUB_RUN_NUMBER
+          APP_VERSION: ${{ env.VERSION_NUMBER }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
