--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-  # Build job. Builds app for Android with Buildozer
   build-android:
     name: Build for Android
     runs-on: ubuntu-latest
@@ -11,12 +10,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2 
         
-      - name: Set version number
-        run: |
-          $version = '0.0.${{ github.run_number }}'
-          echo $version
-          echo "VERSION_NUMBER=$version" 
-
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@v1.1.3
         id: buildozer
@@ -24,7 +17,7 @@ jobs:
           workdir: .
           buildozer_version: stable
         env:
-          APP_VERSION: ${{ env.VERSION_NUMBER }}
+          APP_VERSION: '0.0.${{ github.run_number }}'
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
